# supertriplets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
archive/: mmimdb_to_tinymmimdb.ipynb
supertriplets/: __init__.py  dataset.py  distance.py  encoder.py  eval.py  evaluate.py  index.py  loss.py  sample.py  utils.py
supertriplets/models/: __init__.py  _loader.py  _registry.py  language.py  multimodal.py  vision.py
tests/: conftest.py  convergence_test.py  dataset_test.py  distance_test.py  encoder_test.py  eval_test.py  index_test.py  loss_test.py  sample_test.py
tests/data/tinymmimdb/: data.csv
